# obris-dev-squad-agent

./: .dev-autonomo.yml  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0e3c98acf69d_add_tool_authorization_attempts.py  188ba8eb067d_initial_schema.py  4378ec26485b_unify_external_api_calls_billing_.py  a1b2c3d4e5f6_add_reviewer_to_agent_tier_enum.py  b2c3d4e5f6a7_phase2_preparatory_fields.py  c3d4e5f6a7b8_add_anthropic_managed_ids.py  d4e5f6a7b8c9_add_managed_agents_session_fields.py  e5f6a7b8c9d0_stack_knowledge_schema.py  f6a7b8c9d0e1_add_skill_proposal_kind.py  g7a8b9c0d1e2_rag_audit_log.py  h8a9b0c1d2e3_dream_jobs.py  i9b0c1d2e3f4_normalize_api_call_kind_enum.py  j0c1d2e3f4g5_normalize_api_provider_enum.py  k1d2e3f4g5h6_squad_stacks.py  l2e3f4g5h6i7_onboarding_progress.py
docs/: CONVENTIONS.md  MANAGED_AGENTS.md  MIGRATION_PHASE_5.md  ROADMAP_NOTES.md  SANDBOX_MODES.md  TROUBLESHOOTING.md  WEBHOOKS.md  redesign-onboarding-2026-05-14.md
infra/: Makefile  docker-compose.yml
prompts/architect/: generic.md  managed.md
prompts/ba/: generic.md  managed.md
prompts/dev/: managed.md
prompts/onboarding/: analyst.md  managed.md
prompts/reviewer/: generic.md
scripts/dev/: README.md  _runner_lib.py  backfill_runs.py  cleanup_anthropic.py  migrate_secrets_to_db.py  provision_managed_agents.py  run_agent_demo.py  run_architect_task.py  run_ba_task.py  run_dev_address_review.py  run_onboarding_analyst.py  run_platform_task.py  run_reindex_worker.py  run_reviewer_task.py  seed_dev_data.py  seed_stack_profiles.py  smoke_managed_agents.py
src/dev_autonomo/: config.py
tests/: conftest.py
tests/integration/: test_enforcement.py  test_file_tools.py  test_indexer.py  test_playbook_miner.py  (+1 more)
(+194 files in other folders)
