[project]
name = "dev-autonomo"
version = "0.1.0"
description = "Plataforma de agentes autonomos de desenvolvimento"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Configuration & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database (async-first; psycopg para Alembic sync)
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    # Cache / queue
    "redis>=5.0.0",
    "aio-pika>=9.4.0",
    # Vector store
    "qdrant-client>=1.12.0",
    # Embeddings
    "voyageai>=0.3.0",
    # LLM
    "anthropic>=0.40.0",
    # MCP
    "mcp>=0.9.0",
    # Crypto / secrets
    "cryptography>=43.0.0",
    # Logging
    "structlog>=24.4.0",
    # IDs
    "ulid-py>=1.1.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "gitpython>=3.1.50",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_autonomo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:.*Event loop is closed.*:RuntimeWarning",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
